# docs/swagger.yaml
@@ -101,12 +101,8 @@ definitions:
       email:
         type: string
       password:
-        maxLength: 50
-        minLength: 6
         type: string
       username:
-        maxLength: 50
-        minLength: 3
         type: string
     required:
     - email
@@ -120,6 +116,13 @@ definitions:
       status:
         type: integer
       title:
+        type: string
+    type: object
+  service.UpdateRequest:
+    properties:
+      email:
+        type: string
+      password:
         type: string
     type: object
 host: localhost:8080
@@ -308,6 +311,50 @@ paths:
       summary: Update article
       tags:
       - articles
+  /users/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Update user info
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: User info
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/service.UpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.User'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Update user
+      tags:
+      - users
   /users/login:
     post:
       consumes:
