# internal/model/user.go
@@ -2,6 +2,8 @@ package model
 
 import (
 	"time"
+
+	"golang.org/x/crypto/bcrypt"
 )
 
 // UserStatus 用户状态
@@ -36,4 +38,20 @@ type User struct {
 	Password  string     `gorm:"size:100;not null" json:"-"`
 	Email     string     `gorm:"size:100;uniqueIndex" json:"email" example:"test@example.com"`
 	Status    UserStatus `gorm:"default:1" json:"status" example:"1"`
+}
+
+// ValidatePassword 验证密码
+func (u *User) ValidatePassword(password string) bool {
+	err := bcrypt.CompareHashAndPassword([]byte(u.Password), []byte(password))
+	return err == nil
+}
+
+// SetPassword 加密并设置密码
+func (u *User) SetPassword(password string) error {
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(password), bcrypt.DefaultCost)
+	if err != nil {
+		return err
+	}
+	u.Password = string(hashedPassword)
+	return nil
 }
